Update imports, code refactor

--- a/Sound-Preprocessing.ipynb
+++ b/Sound-Preprocessing.ipynb
@@ -3,7 +3,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import os.path\n",
         "import re\n",
         "import os\n",
         "import requests\n",
@@ -19,33 +18,52 @@
       "metadata": {
         "id": "D9ykMwMheXQr"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "if path.exists('/content/data') == False:\n",
-        "  os.mkdir('/content/data')\n",
+        "path_main = '/content'\n",
+        "path_data = os.path.join(path_main, 'data')\n",
+        "path_sorted_data = os.path.join(path_main, 'sorted_data')\n",
         "\n",
-        "os.chdir('/content/data')\n",
+        "zip_file_url_song = \"https://zenodo.org/records/1188976/files/Audio_Song_Actors_01-24.zip?download=1\"\n",
+        "zip_file_url_speach = \"https://zenodo.org/records/1188976/files/Audio_Speech_Actors_01-24.zip?download=1\"\n",
+        "\n",
+        "dicts = {'01': 'neutral', '02': 'calm', '03': 'happy', '04': 'sad', '05': 'angry', '06': 'fearful', '07': 'disgust', '08': 'surprised'}"
+      ],
+      "metadata": {
+        "id": "UTy8NSpE3Zjd"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if path.exists(path_data) == False:\n",
+        "  os.mkdir(path_data)\n",
+        "\n",
+        "os.chdir(path_data)\n",
         "!pwd\n",
         "!ls"
       ],
       "metadata": {
-        "id": "bJ9SJPfegXmg",
-        "outputId": "3ff540ef-3990-4a01-cd94-3d725414a63c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bJ9SJPfegXmg",
+        "outputId": "c5b0ea9e-1e9c-4e7c-b0f6-ccf0a6384f6c"
       },
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/data\n"
+            "/content/data\n",
+            "song  speech\n"
           ]
         }
       ]
@@ -53,46 +71,63 @@
     {
       "cell_type": "code",
       "source": [
-        "zip_file_url = \"https://zenodo.org/records/1188976/files/Audio_Song_Actors_01-24.zip?download=1\"\n",
-        "r = requests.get(zip_file_url)\n",
-        "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
-        "z.extractall('/content/data/song')"
+        "if path.exists(path_sorted_data) == False:\n",
+        "  os.mkdir(path_sorted_data)\n",
+        "\n",
+        "os.chdir(path_sorted_data)\n",
+        "!pwd\n",
+        "!ls"
       ],
       "metadata": {
-        "id": "YwLkTVMIgWZ8"
+        "id": "qnZlUFpi3eBz",
+        "outputId": "108dc252-e8d9-469a-b845-4c502fbf029d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 6,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/sorted_data\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "zip_file_url = \"https://zenodo.org/records/1188976/files/Audio_Speech_Actors_01-24.zip?download=1\"\n",
-        "r = requests.get(zip_file_url)\n",
-        "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
-        "z.extractall('/content/data/speech')"
+        "req = requests.get(zip_file_url_song)\n",
+        "zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
+        "zip.extractall(os.path.join(path_data, 'song'))\n",
+        "\n",
+        "req = requests.get(zip_file_url_speach)\n",
+        "zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
+        "zip.extractall(os.path.join(path_data, 'speech'))"
       ],
       "metadata": {
-        "id": "WT88wbT7i9dD"
+        "id": "YwLkTVMIgWZ8"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "UE-QdzQXcP7K"
       },
       "outputs": [],
       "source": [
         "y, sr = librosa.load('/content/data/speech/Actor_01/03-01-01-01-01-01-01.wav')\n",
-        "yt,_=librosa.effects.trim(y)"
+        "yt, _ = librosa.effects.trim(y)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "OxWBxKhjcP7L"
       },
@@ -103,14 +138,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
-        "id": "o2KNTH0ccP7M",
-        "outputId": "9a7ff41f-7668-4891-a6ef-26d9db34e1d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "o2KNTH0ccP7M",
+        "outputId": "c30d49ab-ef70-4275-ea09-cd056a53f739"
       },
       "outputs": [
         {
@@ -125,155 +160,113 @@
         }
       ],
       "source": [
-        "mel_spect = librosa.feature.melspectrogram(y=y, sr=sr, n_fft=1024, hop_length=100)\n",
-        "mel_spect = librosa.power_to_db(mel_spect, ref=np.max)\n",
-        "librosa.display.specshow(mel_spect, y_axis='mel', fmax=20000, x_axis='time');\n",
+        "mel_spect = librosa.feature.melspectrogram(y = y, sr = sr, n_fft = 1024, hop_length = 100)\n",
+        "mel_spect = librosa.power_to_db(mel_spect, ref = np.max)\n",
+        "librosa.display.specshow(mel_spect, y_axis = 'mel', fmax = 20000, x_axis = 'time');\n",
         "#plt.title('Mel Spectrogram');\n",
         "# plt.savefig('x.jpeg')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 41,
       "metadata": {
-        "id": "1ePiuUx3cP7O"
-      },
-      "outputs": [],
-      "source": [
-        "dicts={'01' : 'neutral', '02' : 'calm', '03' : 'happy', '04' : 'sad', '05' : 'angry', '06' : 'fearful', '07' : 'disgust', '08' : 'surprised'}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "id": "FzKJC38kcP7O"
-      },
-      "outputs": [],
-      "source": [
-        "path_main='/content/data'\n",
-        "folders_main=os.listdir(path_main)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "lBgxTckKcP7P",
-        "outputId": "30315170-e308-4835-e285-84a10955173d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "pgyTmKMFcP7P",
+        "outputId": "d0bba3eb-c4b6-4a35-8d7a-d6d4799aacba"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "['speech', 'song']"
+              "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ],
-      "source": [
-        "folders_main"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "pgyTmKMFcP7P",
-        "outputId": "a2759765-a97d-4980-9dce-056680e8fc68"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "24 neutral\n",
-            "24 neutral\n",
-            "24 neutral\n",
-            "24 neutral\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 calm\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 happy\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 sad\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 angry\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 fearful\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 disgust\n",
-            "24 surprised\n",
-            "24 surprised\n",
-            "24 surprised\n",
-            "24 surprised\n",
-            "24 surprised\n",
-            "24 surprised\n",
-            "24 surprised\n"
-          ]
+          "metadata": {}
         }
       ],
       "source": [
         "counter=0\n",
-        "for folders in folders_main :\n",
-        "    path_in='{0}/{1}'.format(path_main, folders)\n",
-        "    files_sub=os.listdir(path_in)\n",
-        "    for file in files_sub :\n",
-        "        numbers = re.findall('\\d+',file)\n",
-        "        emotion=dicts[numbers[2]]\n",
-        "        print(numbers[6],emotion)\n",
-        "        path_save='sorted_data/{0}/{1}.jpeg'.format(emotion,file)\n",
-        "        path_load='{0}/{1}'.format(path_in,file)\n",
-        "        y, sr = librosa.load(path_load)\n",
-        "        yt,_=librosa.effects.trim(y)\n",
-        "        y=yt\n",
-        "        mel_spect = librosa.feature.melspectrogram(y=y, sr=sr, n_fft=1024, hop_length=100)\n",
-        "        mel_spect = librosa.power_to_db(mel_spect, ref=np.max)\n",
-        "        librosa.display.specshow(mel_spect, y_axis='mel', fmax=20000, x_axis='time');\n",
-        "        # plt.savefig(path_save)\n",
-        "\n"
+        "for folder in os.listdir(path_data):\n",
+        "  path_actor = os.path.join(path_data, folder)\n",
+        "  for sub_folder in os.listdir(path_actor):\n",
+        "    path_in = os.path.join(path_actor, sub_folder)\n",
+        "    files = os.listdir(path_in)\n",
+        "    for file in files:\n",
+        "      numbers = re.findall('\\d+', file)\n",
+        "      emotion = dicts[numbers[2]]\n",
+        "      # print(numbers[6], emotion)\n",
+        "      path_folder_to_save = os.path.join(path_sorted_data, emotion)\n",
+        "      path_save = os.path.join(path_folder_to_save, '{0}.jpeg'.format(file))\n",
+        "      path_load = os.path.join(path_in, file)\n",
+        "      y, sr = librosa.load(path_load)\n",
+        "      yt, _ = librosa.effects.trim(y)\n",
+        "      y = yt\n",
+        "      mel_spect = librosa.feature.melspectrogram(y = y, sr = sr, n_fft = 1024, hop_length = 100)\n",
+        "      mel_spect = librosa.power_to_db(mel_spect, ref = np.max)\n",
+        "      # librosa.display.specshow(mel_spect, y_axis = 'mel', fmax = 20000, x_axis = 'time');\n",
+        "\n",
+        "      if not os.path.exists(path_folder_to_save):\n",
+        "        os.makedirs(path_folder_to_save)\n",
+        "      plt.savefig(path_save)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = 0\n",
+        "for _, _, files in os.walk(path_data):\n",
+        "  count += len(files)\n",
+        "\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "id": "Mcmvema4BE2O",
+        "outputId": "edeb6838-c65b-47d0-cb2a-ff0fc33a5073",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2452\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = 0\n",
+        "for _, _, files in os.walk(path_sorted_data):\n",
+        "  count += len(files)\n",
+        "\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "id": "1PglUEnyBVg-",
+        "outputId": "175326ab-ea26-4a6f-8266-deadf2b04584",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2452\n"
+          ]
+        }
       ]
     }
   ],
