--- a/Sound-Preprocessing.ipynb
+++ b/Sound-Preprocessing.ipynb
@@ -18,104 +18,109 @@
       "metadata": {
         "id": "D9ykMwMheXQr"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "path_main = '/content'\n",
-        "path_data = os.path.join(path_main, 'data')\n",
-        "path_sorted_data = os.path.join(path_main, 'sorted_data')\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "AI7Op9n5CrQE",
+        "outputId": "71ce32c5-09eb-4646-b6ec-b2d47c004fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path_main: str = '/content/drive/MyDrive/Colab Notebooks'\n",
         "\n",
-        "zip_file_url_song = \"https://zenodo.org/records/1188976/files/Audio_Song_Actors_01-24.zip?download=1\"\n",
-        "zip_file_url_speach = \"https://zenodo.org/records/1188976/files/Audio_Speech_Actors_01-24.zip?download=1\"\n",
+        "if path.exists(path_main):\n",
+        "  path_main = path.join(path_main, 'ver')\n",
+        "else:\n",
+        "  path_main = '/content'\n",
         "\n",
-        "dicts = {'01': 'neutral', '02': 'calm', '03': 'happy', '04': 'sad', '05': 'angry', '06': 'fearful', '07': 'disgust', '08': 'surprised'}"
+        "path_data: str = path.join(path_main, 'data')\n",
+        "path_sorted_data: str = path.join(path_main, 'sorted_data')\n",
+        "\n",
+        "zip_file_url_song: str = \"https://zenodo.org/records/1188976/files/Audio_Song_Actors_01-24.zip?download=1\"\n",
+        "zip_file_url_speach: str = \"https://zenodo.org/records/1188976/files/Audio_Speech_Actors_01-24.zip?download=1\"\n",
+        "\n",
+        "dicts: dict = {'01': 'neutral', '02': 'calm', '03': 'happy', '04': 'sad', '05': 'angry', '06': 'fearful', '07': 'disgust', '08': 'surprised'}"
       ],
       "metadata": {
         "id": "UTy8NSpE3Zjd"
       },
-      "execution_count": 37,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "if path.exists(path_data) == False:\n",
-        "  os.mkdir(path_data)\n",
+        "def check_if_exist_and_create(path_data: str) -> None:\n",
+        "  if path.exists(path_data) == False:\n",
+        "    os.makedirs(path_data)\n",
         "\n",
-        "os.chdir(path_data)\n",
-        "!pwd\n",
-        "!ls"
+        "def get_and_extract(url: str, path_to_extract: str) -> None:\n",
+        "  req = requests.get(url)\n",
+        "  zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
+        "  zip.extractall(os.path.join(path_to_extract, 'song'))\n",
+        "\n",
+        "def count_files(path_folder: str) -> int:\n",
+        "  count: int = 0\n",
+        "  for _, _, files in os.walk(path_folder):\n",
+        "    count += len(files)\n",
+        "  return count"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bJ9SJPfegXmg",
-        "outputId": "c5b0ea9e-1e9c-4e7c-b0f6-ccf0a6384f6c"
+        "id": "ZpZjUq58enky"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/data\n",
-            "song  speech\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if path.exists(path_sorted_data) == False:\n",
-        "  os.mkdir(path_sorted_data)\n",
-        "\n",
-        "os.chdir(path_sorted_data)\n",
-        "!pwd\n",
-        "!ls"
-      ],
-      "metadata": {
-        "id": "qnZlUFpi3eBz",
-        "outputId": "108dc252-e8d9-469a-b845-4c502fbf029d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/sorted_data\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "req = requests.get(zip_file_url_song)\n",
-        "zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
-        "zip.extractall(os.path.join(path_data, 'song'))\n",
-        "\n",
-        "req = requests.get(zip_file_url_speach)\n",
-        "zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
-        "zip.extractall(os.path.join(path_data, 'speech'))"
-      ],
-      "metadata": {
-        "id": "YwLkTVMIgWZ8"
-      },
-      "execution_count": 5,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "source": [
+        "check_if_exist_and_create(path_main)\n",
+        "check_if_exist_and_create(path_data)\n",
+        "check_if_exist_and_create(path_sorted_data)"
+      ],
+      "metadata": {
+        "id": "bJ9SJPfegXmg"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_and_extract(zip_file_url_song, path.join(path_data, 'song'))\n",
+        "get_and_extract(zip_file_url_speach, path.join(path_data, 'speach'))"
+      ],
+      "metadata": {
+        "id": "KHAhX7Z7iD8h"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "UE-QdzQXcP7K"
       },
@@ -127,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "OxWBxKhjcP7L"
       },
@@ -138,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -169,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -218,53 +223,27 @@
     {
       "cell_type": "code",
       "source": [
-        "count = 0\n",
-        "for _, _, files in os.walk(path_data):\n",
-        "  count += len(files)\n",
+        "count_files_data_folder: int = count_files(path_data)\n",
+        "count_files_sorted_data_folder: int = count_files(path_sorted_data)\n",
         "\n",
-        "print(count)"
+        "print(count_files_data_folder)\n",
+        "print(count_files_sorted_data_folder)"
       ],
       "metadata": {
         "id": "Mcmvema4BE2O",
-        "outputId": "edeb6838-c65b-47d0-cb2a-ff0fc33a5073",
+        "outputId": "ba197947-e45b-4756-b1f3-417e01559931",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2452\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "count = 0\n",
-        "for _, _, files in os.walk(path_sorted_data):\n",
-        "  count += len(files)\n",
-        "\n",
-        "print(count)"
-      ],
-      "metadata": {
-        "id": "1PglUEnyBVg-",
-        "outputId": "175326ab-ea26-4a6f-8266-deadf2b04584",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2452\n"
+            "4904\n",
+            "0\n"
           ]
         }
       ]
