--- a/Sound-Preprocessing.ipynb
+++ b/Sound-Preprocessing.ipynb
@@ -28,11 +28,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "AI7Op9n5CrQE",
-        "outputId": "71ce32c5-09eb-4646-b6ec-b2d47c004fdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AI7Op9n5CrQE",
+        "outputId": "71ce32c5-09eb-4646-b6ec-b2d47c004fdf"
       },
       "execution_count": 2,
       "outputs": [
@@ -79,7 +79,7 @@
         "def get_and_extract(url: str, path_to_extract: str) -> None:\n",
         "  req = requests.get(url)\n",
         "  zip = zipfile.ZipFile(io.BytesIO(req.content))\n",
-        "  zip.extractall(os.path.join(path_to_extract, 'song'))\n",
+        "  zip.extractall(path_to_extract)\n",
         "\n",
         "def count_files(path_folder: str) -> int:\n",
         "  count: int = 0\n",
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "ZpZjUq58enky"
       },
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": []
     },
     {
