--- a/Sound-Preprocessing.ipynb
+++ b/Sound-Preprocessing.ipynb
@@ -13,37 +13,15 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "from os import path"
-      ],
-      "metadata": {
-        "id": "D9ykMwMheXQr"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "from os import path\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AI7Op9n5CrQE",
-        "outputId": "0adfc15e-d0f0-45fe-d515-02bc80fbab0f"
+        "id": "D9ykMwMheXQr"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -66,7 +44,7 @@
       "metadata": {
         "id": "UTy8NSpE3Zjd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +85,7 @@
       "metadata": {
         "id": "ZpZjUq58enky"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +98,7 @@
       "metadata": {
         "id": "bJ9SJPfegXmg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,12 +110,12 @@
       "metadata": {
         "id": "KHAhX7Z7iD8h"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "UE-QdzQXcP7K",
         "colab": {
@@ -165,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2676,7 +2654,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
